bad-sample/src/main/java/com/andrewreitz/bad/sample/Main.java
/*
 * Copyright 2014 Andrew Reitz
 * This work is free. You can redistribute it and/or modify it under the
 * terms of the Do What The Fuck You Want To Public License, Version 2,
 * as published by Sam Hocevar. See the COPYING file for more details.
 */

package com.andrewreitz.bad.sample;

import com.andrewreitz.bad.Bad;

@Bad
public class Main {
  @Bad
  public static void main(String[] args) {
    System.out.println("Hello World!");
  }
}
